@@ -25,6 +25,8 @@
   	  sdcc/device/lib/mos6502/_muluchar.s,
   	  sdcc/device/lib/mos6502/abs.c:
   	  Add assembly implementation of divs, mod, mulchar and abs.
+  	* sdcc/src/mos6502/gen.c:
+	  Add m6502_unimplemented() and refactopr genCpl().
 
 2022-02-26 Gabriele Gorla <gorlik@yahoo.com>
 
